--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.retry:spring-retry'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+  	runtimeOnly 'org.postgresql:postgresql'
 
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
